# Recluse-Game

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
CMake/: Macros.cmake
Engine/: CMakeLists.txt
Engine/AI/: CMakeLists.txt
Engine/Animation/: CMakeLists.txt
Engine/Animation/Private/: Animation.cpp  Clip.cpp  Skeleton.cpp
Engine/Animation/Public/Animation/: Animation.hpp  Clip.hpp  Skeleton.hpp
Engine/Audio/: CMakeLists.txt
Engine/Audio/Private/: Audio.cpp  AudioEngine.cpp  AudioEngine.hpp  AudioMemAllocDefines.cpp  WwiseEngine.cpp  WwiseEngine.hpp
Engine/Audio/Public/Audio/: Audio.hpp  AudioSource.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: Core.cpp
Engine/Core/Private/Logging/: Log.cpp
Engine/Core/Private/Math/: AABB.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  ViewFrustum.cpp
Engine/Core/Private/Memory/: FreeListAllocator.cpp
Engine/Core/Private/Thread/: Threading.cpp
Engine/Core/Private/Utility/: Archive.cpp  Cpu.cpp  Image.cpp  Profile.cpp  stb_image.c  stb_image.cpp
Engine/Core/Private/Win32/: Keyboard.cpp  Mouse.cpp  Win32Time.cpp  Window.cpp
Engine/Core/Public/Core/: Core.hpp  Exception.hpp  Serialize.hpp  Types.hpp
Engine/Core/Public/Core/Logging/: Log.hpp
Engine/Core/Public/Core/Math/: AABB.hpp  Box.hpp  Color4.hpp  Common.hpp  DualQuaternion.hpp  Matrix3.hpp  Matrix4.hpp  OBB.hpp  Plane.hpp  Quaternion.hpp  Ray.hpp  Sphere.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  ViewFrustum.hpp
Engine/Core/Public/Core/Memory/: Allocator.hpp  FreeListAllocator.hpp  SmartPointer.hpp  StackAllocator.hpp
Engine/Core/Public/Core/Thread/: CoreThread.hpp  Threading.hpp
Engine/Core/Public/Core/Utility/: Archive.hpp  CharHash.hpp  Cpu.hpp  Image.hpp  Module.hpp  Profile.hpp  Time.hpp  Vector.hpp  stb_image.hpp
Engine/Filesystem/: CMakeLists.txt
Engine/Filesystem/Private/: Filesystem.cpp
Engine/Filesystem/Public/Filesystem/: File.hpp  Filesystem.hpp
Engine/Game/: CMakeLists.txt
Engine/Game/Private/: AnimationComponent.cpp  AudioComponent.cpp  Camera.cpp  CameraComponent.cpp  CameraViewFrustum.cpp  Component.cpp  Engine.cpp  GameObject.cpp  GameObjectManager.cpp  LightComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  ParticleSystemComponent.cpp  PhysicsComponent.cpp  RendererComponent.cpp  SkinnedMeshComponent.cpp
Engine/Game/Private/Geometry/: Cube.cpp  UVSphere.cpp
Engine/Game/Private/Rendering/: RendererResourcesCache.cpp  Sky.cpp  TextureCache.cpp
Engine/Game/Private/Scene/: AssetManager.cpp  ModelLoader.cpp  ModelLoaderFBX.cpp  ModelLoaderFBX.hpp  ModelLoaderGLTF.cpp  ModelLoaderGLTF.hpp  Scene.cpp  json.hpp  tiny_gltf.cpp  tiny_gltf.hpp
Engine/Game/Public/Game/: AIComponent.hpp  AnimationComponent.hpp  AudioComponent.hpp  Camera.hpp  CameraComponent.hpp  CameraViewFrustum.hpp  Component.hpp  Engine.hpp  GameObject.hpp  GameObjectManager.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  ParticleSystemComponent.hpp  PhysicsComponent.hpp  PointLightComponent.hpp  RenderComponent.hpp  RendererComponent.hpp  SkinnedMeshComponent.hpp
Engine/Physics/: CMakeLists.txt
Engine/Physics/Private/: BoxCollider.cpp  BulletPhysics.cpp  BulletPhysics.hpp  CompoundCollider.cpp  PhysX.cpp  PhysX.hpp  Physics.cpp  RigidBody.cpp  SphereCollider.cpp
Engine/Physics/Public/Physics/: BoxCollider.hpp  Collider.hpp  Collision.hpp  CompoundCollider.hpp  Physics.hpp  PhysicsConfigs.hpp  RigidBody.hpp  SphereCollider.hpp
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Private/: BakeIBL.cpp  BakeIBL.hpp  Clusters.cpp  Clusters.hpp  CmdList.cpp  Decal.cpp  GlobalDescriptor.cpp  GlobalMaterial.cpp  HDR.cpp  IndexBuffer.cpp  LightBVH.cpp  LightBVH.hpp  LightDescriptor.cpp  LightMaterial.cpp  LightProbe.cpp  Material.cpp  MaterialDescriptor.cpp  Mesh.cpp  MeshData.cpp  MeshDescriptor.cpp  Particles.cpp  RenderObject.cpp  RenderQuad.cpp  Renderer.cpp  RendererData.cpp  RendererData.hpp  Resources.cpp  ScreenQuad.cpp  SkyAtmosphere.cpp  StructuredBuffer.cpp  TextureType.cpp  UIDescriptor.cpp  UIOverlay.cpp  UIOverlay.hpp  VertexBuffer.cpp  VertexDescription.cpp  VertexDescription.hpp
Engine/Renderer/Private/RHI/: Buffer.cpp  Buffer.hpp  Commandbuffer.cpp  Commandbuffer.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Framebuffer.cpp  Framebuffer.hpp  GpuParams.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  RenderTarget.cpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VulkanConfigs.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRHI.cpp  VulkanRHI.hpp
Engine/Renderer/Public/Renderer/: CmdList.hpp  Decal.hpp  GlobalDescriptor.hpp  GlobalMaterial.hpp  HDR.hpp  IndexBuffer.hpp  LightDescriptor.hpp  LightMaterial.hpp  LightProbe.hpp  Material.hpp  MaterialDescriptor.hpp  Mesh.hpp  MeshData.hpp  MeshDescriptor.hpp  Particles.hpp  RenderCmd.hpp  RenderObject.hpp  RenderQuad.hpp  Renderer.hpp  Resources.hpp  ScreenQuad.hpp  SkyAtmosphere.hpp  SkyDome.hpp  StructuredBuffer.hpp  TextureType.hpp  UIDescriptor.hpp  UserParams.hpp  Vertex.hpp  VertexBuffer.hpp
Engine/UI/: CMakeLists.txt
Engine/UI/Private/: FontManager.cpp  FreeType.cpp  FreeType.hpp  UI.cpp
Engine/UI/Public/UI/: Canvas.hpp  FontManager.hpp  Text.hpp  UI.hpp
Game/: CMakeLists.txt  README.md
Game/Source/: Main.cpp
Game/Source/Camera/: PlayerCamera.hpp
Game/Source/Playable/: IActor.hpp  Player.hpp
Game/Source/Scenes/: TestScene.hpp
Game/Source/UI/: MenuHandle.hpp
Game/Source/Weapon/: IWeapon.hpp
Regression/: CMakeLists.txt  Main.cpp  Tester.hpp
Regression/Game/: TestGameObject.cpp  TestGameObject.hpp
Regression/Math/: TestMath.hpp  TestMatrix.cpp  TestVector.cpp
Regression/Memory/: TestAllocator.cpp  TestMemory.hpp
Test/: CMakeLists.txt  DemoTextureLoad.hpp  Main.cpp
Test/Game/: Main.cpp
Test/Game/Scripts/: CubeObject.hpp  FlyViewCamera.hpp  Helmet.hpp  Item.hpp  Lantern.hpp  MoveObjectScript.hpp  OrbitObjectScript.hpp
(+131 files in other folders)
